implement naive version of cross-chain token

--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@openzeppelin/contracts": "^2.4.0"
+    "@openzeppelin/contracts": "^2.4.0",
+    "solidity-rlp": "^2.0.1"
+  },
+  "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.4",
+    "chai": "^4.2.0",
+    "rlp": "^2.2.4"
   }
 }
