--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.4",
     "chai": "^4.2.0",
+    "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-util": "^6.2.0",
+    "merkle-patricia-tree": "^3.0.0",
     "rlp": "^2.2.4"
   }
 }
